[gd_scene load_steps=11 format=1]

[ext_resource path="res://scene/game/game.gd" type="Script" id=1]
[ext_resource path="res://scene/star_background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/game/planner.tscn" type="PackedScene" id=3]
[ext_resource path="res://font/Nestill-Regular-Large.fnt" type="BitmapFont" id=4]
[ext_resource path="res://font/Nestill-Regular-Small.fnt" type="BitmapFont" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="Animation" id=2]

resource/name = "Title Animation"
length = 5.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../title:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2.6, 5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 13 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="star_background" parent="background" instance=ExtResource( 2 )]

[node name="planner_layer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="planner" parent="planner_layer" instance=ExtResource( 3 )]

[node name="pause_menu" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="pause_panel" type="Panel" parent="pause_menu"]

process/pause_mode = 2
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )

[node name="title" type="Label" parent="pause_menu/pause_panel"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 480.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.332031, 0.332031, 1 )
text = "9g"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="title_animation" type="AnimationPlayer" parent="pause_menu/pause_panel"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("")
"anims/Title Animation" = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Title Animation"

[node name="resume" type="Button" parent="pause_menu/pause_panel"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = -45.0
margin/right = -167.0
margin/bottom = -119.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.390625, 0.390625, 0.390625, 0.92349 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume Game"
flat = true

[node name="quit" type="Button" parent="pause_menu/pause_panel"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 235.0
margin/top = -120.0
margin/right = -235.0
margin/bottom = -119.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.390625, 0.390625, 0.390625, 0.92349 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit to Main Menu"
flat = true

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = 0
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2


